--- a/NEWS
+++ b/NEWS
@@ -599,15 +599,15 @@ BUGFIXES:
 584 ==> 133367 - It will not delete a file from the database.
 585 ==> 139367 - digiKam quits selecting "no" when being asked to remove non existent files from database.
 586 ==> 246869 - Deleting albums, as described, is either broken or insane.
-587 ==> 
-588 ==> 
-589 ==> 
-590 ==> 
-591 ==> 
-592 ==> 
-593 ==> 
-594 ==> 
-595 ==> 
+587 ==> 143422 - Crash click image edition.
+588 ==> 124989 - Problems with ICC profile type recognition.
+589 ==> 137750 - Color mode2 nikon d70s not recognized as adobe rgb.
+590 ==> 332598 - Seems to display wrong colours on TIFF files.
+591 ==> 131949 - No gamut limits shown in proofing profile info.
+592 ==> 152528 - Nikon D80 icc profile not recognized as input profile in Showfoto.
+593 ==> 191113 - digiKam doesn't recognize images with colorspace adobergb.
+594 ==> 125735 - Can't disable individual Monitor/Workspace/Input/Proof profiles.
+595 ==> 259182 - Jpg image shows corrupt in view and edit mode.
 596 ==> 
 597 ==> 
 598 ==> 
