--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-digiKam 7.5.0 - Release date: 2022-xx-xx
+digiKam 7.5.0 - Release date: 2022-01-16
 
 *****************************************************************************************************
 NEW FEATURES:
