--- a/NEWS
+++ b/NEWS
@@ -622,5 +622,20 @@ BUGFIXES:
 607 ==> 116152 - Add display calibration dialog/wizard.
 608 ==> 147367 - Support for color correction of Oval frame fade using unfaded outer fame color.
 609 ==> 448286 - Could not move image to trash.
-610 ==> 
+610 ==> 194780 - When using synchronize images with database the creator in the xmp data is added instead of replaced.
 611 ==> 
+612 ==> 
+613 ==> 
+614 ==> 
+615 ==> 
+616 ==> 
+617 ==> 
+618 ==> 
+619 ==> 
+620 ==> 
+621 ==> 
+622 ==> 
+623 ==> 
+624 ==> 
+625 ==> 
+626 ==> 
