--- a/NEWS
+++ b/NEWS
@@ -625,7 +625,7 @@ BUGFIXES:
 610 ==> 194780 - When using synchronize images with database the creator in the xmp data is added instead of replaced.
 611 ==> 381855 - Some icons are invisible with Fusion theme.
 612 ==> 436259 - Most of icons disabled after theme changes - doesn't came back by changing back previous version.
-613 ==> 
+613 ==> 376617 - Odd behaviour of sidebar buttons under some themes (Adwaita-Qt).
 614 ==> 
 615 ==> 
 616 ==> 
