--- a/NEWS
+++ b/NEWS
@@ -626,12 +626,12 @@ BUGFIXES:
 611 ==> 381855 - Some icons are invisible with Fusion theme.
 612 ==> 436259 - Most of icons disabled after theme changes - doesn't came back by changing back previous version.
 613 ==> 376617 - Odd behaviour of sidebar buttons under some themes (Adwaita-Qt).
-614 ==> 
-615 ==> 
-616 ==> 
-617 ==> 
-618 ==> 
-619 ==> 
+614 ==> 091373 - Preserve aspect ratio of tag icons instead of stretching them to be square.
+615 ==> 182830 - Large icons in sidebar tab titles.
+616 ==> 096328 - Icons bar add tools.
+617 ==> 183131 - Missed icons for - "Caption/Tags", "Metadata", "Image Editor", "Color Management".
+618 ==> 198201 - digiKam crashed after changing theme.
+619 ==> 113804 - When a camera is added to the toolbar, the icon is not displayed after digiKam restart.
 620 ==> 
 621 ==> 
 622 ==> 
