--- a/NEWS
+++ b/NEWS
@@ -645,7 +645,7 @@ BUGFIXES:
 630 ==> 091550 - Hide cursor in fullscreen mode.
 631 ==> 091551 - When panning image with the mouse in fullscreen mode, do not show scroll bars.
 632 ==> 175598 - digiKam always starts in fullscreen after a crash.
-633 ==> 
+633 ==> 434152 - Widget style 'Windows' does not use native Windows buttons and widgets.
 634 ==> 
 635 ==> 
 636 ==> 
