--- a/NEWS
+++ b/NEWS
@@ -670,7 +670,7 @@ BUGFIXES:
 655 ==> 387946 - Find new items stalls at 90%.
 656 ==> 438059 - digiKam Crash exporting a photo selection or single photo to google Drive.
 657 ==> 448172 - In the dark theme the light icons not working on Windows 10.
-658 ==> 
+658 ==> 440644 - Files intermittantly dropping tags.
 659 ==> 
 660 ==> 
 661 ==> 
