--- a/NEWS
+++ b/NEWS
@@ -689,9 +689,9 @@ BUGFIXES:
 674 ==> 101606 - Integration of digikam with kaddressbook.
 675 ==> 218467 - Marble 100% CPU.
 676 ==> 262111 - digiKam crash using batch tool.
-677 ==> 
-678 ==> 
-679 ==> 
+677 ==> 096430 - Crash on moving selected images from one folder to the other.
+678 ==> 138986 - Most photographs are not shown in the main view any more.
+679 ==> 423227 - File management just deleted 1000 files.
 680 ==> 
 681 ==> 
 682 ==> 
