--- a/NEWS
+++ b/NEWS
@@ -717,6 +717,6 @@ BUGFIXES:
 702 ==> 329697 - digiKam crash when browsing albums (qt-sqlite plugin broken due to BC issue with libsqlite).
 703 ==> 181000 - Crash on closing Camera GUI after download+delete all.
 704 ==> 386396 - Eliminate useless and misleading libpng terminal message.
-705 ==> 
+705 ==> 428990 - High DPI scaling works on display :0 only.
 706 ==> 
 
