--- a/NEWS
+++ b/NEWS
@@ -726,5 +726,11 @@ BUGFIXES:
 711 ==> 229663 - Black & white filter tool show only neutral gray image.
 712 ==> 255757 - The B&W tool affect the property pannel.
 713 ==> 448500 - Light Table left and right panel arrows not visible on dark landscape thumbnails.
-714 ==> 
+714 ==> 230554 - Channel mixer current channel is only "binary" - on or off.
 715 ==> 
+716 ==> 
+717 ==> 
+718 ==> 
+719 ==> 
+720 ==> 
+721 ==> 
