--- a/NEWS
+++ b/NEWS
@@ -738,7 +738,7 @@ BUGFIXES:
 723 ==> 138931 - Allow crop maintaining H/W ratio locked; selectable ratios covering typical print sizes.
 724 ==> 152041 - Rule of Thirds Crop box.
 725 ==> 107054 - After I crop I always get the error saving <image-name> to <foldername> failed.
-726 ==> 
+726 ==> 437162 - Ship or allow support for better colour correction.
 727 ==> 
 728 ==> 
 729 ==> 
