--- a/NEWS
+++ b/NEWS
@@ -739,7 +739,7 @@ BUGFIXES:
 724 ==> 152041 - Rule of Thirds Crop box.
 725 ==> 107054 - After I crop I always get the error saving <image-name> to <foldername> failed.
 726 ==> 437162 - Ship or allow support for better colour correction.
-727 ==> 
+727 ==> 376963 - Printout like a poststamp.
 728 ==> 
 729 ==> 
 730 ==> 
