--- a/NEWS
+++ b/NEWS
@@ -741,5 +741,5 @@ BUGFIXES:
 726 ==> 437162 - Ship or allow support for better colour correction.
 727 ==> 376963 - Printout like a poststamp.
 728 ==> 373023 - Settings button for "Use Color Managment for printing" is not working at PrintImage dialog.
-729 ==> 
+729 ==> 401386 - Cannot save rotated image.
 730 ==> 
