--- a/NEWS
+++ b/NEWS
@@ -743,4 +743,5 @@ BUGFIXES:
 728 ==> 373023 - Settings button for "Use Color Managment for printing" is not working at PrintImage dialog.
 729 ==> 401386 - Cannot save rotated image.
 730 ==> 394346 - Add new tool to Stamp an image.
-731 ==> 
+731 ==> 154376 - Add new tool a remove contamination of camera sensor.
+732 ==> 
