--- a/NEWS
+++ b/NEWS
@@ -744,4 +744,5 @@ BUGFIXES:
 729 ==> 401386 - Cannot save rotated image.
 730 ==> 394346 - Add new tool to Stamp an image.
 731 ==> 154376 - Add new tool a remove contamination of camera sensor.
-732 ==> 
+732 ==> 247794 - Add new tool to use dust removal data from camera.
+733 ==> 
