--- a/NEWS
+++ b/NEWS
@@ -746,4 +746,5 @@ BUGFIXES:
 731 ==> 154376 - Add new tool a remove contamination of camera sensor.
 732 ==> 247794 - Add new tool to use dust removal data from camera.
 733 ==> 268981 - Add DRM support in Image Editor using steganography.
-734 ==> 
+734 ==> 170169 - Curves adjustment requires higher bit depth.
+735 ==> 
