--- a/NEWS
+++ b/NEWS
@@ -9,4 +9,5 @@ BUGFIXES:
 
 001 ==> 448531 - Changelog has wrong spelling for iNaturalist web service.
 002 ==> 420543 - Batch conversion from png to jp2 fails to process random images.
-003 ==> 
+003 ==> 170131 - Create dvd menu for a slide show.
+004 ==> 
