--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES:
 001 ==> 448531 - Changelog has wrong spelling for iNaturalist web service.
 002 ==> 420543 - Batch conversion from png to jp2 fails to process random images.
 003 ==> 170131 - Create dvd menu for a slide show.
-004 ==> 
+004 ==> 091889 - wanna make photocd/ vcd of still images.
+005 ==> 
