--- a/NEWS
+++ b/NEWS
@@ -35,7 +35,7 @@ BUGFIXES:
 025 ==> 331606 - Auto-preview.
 026 ==> 444280 - Opening raw file in image editor crashes digiKam if output color space is Raw Profile (Windows OS only).
 027 ==> 448612 - Allow sorting by Original date time.
-028 ==> 
+028 ==> 448597 - Error pop-up: The application was unable to start correctly (0xc0000005).
 029 ==> 
 030 ==> 
 031 ==> 
