--- a/AUTHORS
+++ b/AUTHORS
@@ -94,6 +94,7 @@ Tom Albers <tomalbers at kde dot nl>                                      : Deve
 DIGIKAM SPLASHSCREENS CREDITS:
 ------------------------------
 
+7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
 7.3.0          : Timothy Dykes                  <timothycdykes at gmail dot com>
@@ -191,6 +192,7 @@ DIGIKAM SPLASHSCREENS CREDITS:
 SHOWFOTO SPLASHSCREENS CREDITS:
 -------------------------------
 
+7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
 7.3.0          : Timothy Dykes                  <timothycdykes at gmail dot com>
@@ -281,6 +283,7 @@ SHOWFOTO SPLASHSCREENS CREDITS:
 ABOUT BACKGROUND IMAGE:
 -----------------------
 
+7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
 7.3.0          : Mattia Verga                   <mattia dot verga at tiscali dot it>
